# space-project

./: Cargo.toml  README.md
space-engine/: Cargo.toml  build.rs
space-engine/res/shaders/scene/: shader.frag  shader.vert
space-engine/res/shaders/scene/mesh/: mesh.frag  mesh.vert
space-engine/res/shaders/ui/: shader.vert
space-engine/src/: lib.rs
space-engine/src/core/: camera.rs
space-engine/src/logger/: mod.rs
space-engine/src/render/: context.rs  dynamic_rendering.rs  mod.rs
space-engine/src/render/scene/: mod.rs  objects.rs
space-engine/src/render/ui/: mod.rs  objects.rs
space-engine/src/resources/: mesh.rs  mod.rs  shader.rs
space-engine/src/utils/: image_utils.rs  math.rs  mod.rs
space-engine/src/vulkan/: buffer.rs  descriptor.rs  mod.rs  pipeline.rs
space-engine/src/vulkan/device/: mod.rs
space-engine/src/vulkan/device/phys_device/: mod.rs  queue_family.rs
space-engine/src/vulkan/instance/: get_wm_name.rs  mod.rs
space-engine/src/vulkan/swapchain/: mod.rs  surface.rs
space-engine/src/window_renderer/: image_renderer.rs  mod.rs
space-game/: Cargo.toml
space-testbed/: Cargo.toml
space-testbed/src/: main.rs
space-testbed/src/app/: mod.rs  state.rs
space-testbed/src/app/core/: player.rs
space-testbed/src/app/debug/: mod.rs  rand_cubes.rs
space-testbed/src/app/input/: keyboard_handler.rs  mod.rs  mouse_handler.rs
space-testbed/src/app/utils/: physics.rs
