[package]
name = "space-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38"
ash-window = "0.13.0"
anyhow = "1.0.102"
gpu-allocator = { version = "0.28.0", default-features = false, features = [
    "std",
    "vulkan",
] }
winit = "0.30"

[build-dependencies]
copy_to_output = "2.2.0"
shaderc = "0.10.1"